force-app/main/default/objects/refedge__Community_Invite__c/fields/refedge__Account_Request__c.field-meta.xml
<CustomField>
    <fullName>refedge__Account_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Request</label>
    <referenceTo>refedge__Reference_Request_Account__c</referenceTo>
    <relationshipLabel>Community Invites</relationshipLabel>
    <relationshipName>Community_Invites</relationshipName>
    <type>Lookup</type>
</CustomField>