force-app/main/default/objects/refedge__Community_Invite__c/fields/refedge__Community_No__c.field-meta.xml
<CustomField>
    <fullName>refedge__Community_No__c</fullName>
    <label>Community No</label>
    <summaryFilterItems>
        <field>refedge__Community_Invite_Contact__c.refedge__Response__c</field>
        <operation>equals</operation>
        <value>No</value>
    </summaryFilterItems>
    <summaryForeignKey>refedge__Community_Invite_Contact__c.refedge__Community_Invite__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>