force-app/main/default/objects/refedge__Community_Invite__c/fields/refedge__Community_Participate_Deadline__c.field-meta.xml
<CustomField>
    <fullName>refedge__Community_Participate_Deadline__c</fullName>
    <label>Community Participate Deadline</label>
    <type>Date</type>
</CustomField>