force-app/main/default/objects/refedge__Community_Invite__c/fields/refedge__Community_Participate_Details__c.field-meta.xml
<CustomField>
    <fullName>refedge__Community_Participate_Details__c</fullName>
    <label>Community Participate Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>